feat: Add escape character support